# nipahblocks

./: Cargo.toml  block.h  camera.c  camera.h  chunk.c  chunk.h  main.c  meson.build
assets/: block_registry.json
src/: block.rs  block_registry.rs  chunk.rs  diagnostics.rs  main.rs  player.rs
