[package]
name = "nipahblocks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.23"
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_state",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "wayland",
] }
