[package]
name = "nipahblocks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.23"
bevy = {  git = "https://github.com/bevyengine/bevy.git", version = "0.16.0-dev", rev = "020d082617c9c61ddd78b8ced84f758db51a2bf9", default-features = false, features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_state",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "wayland",
] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.135"
rand = "0.8.5"
noise = "0.9.0"
